<resources>
    <string name="app_name">Easy Backup</string>
    <string name="contacts">Contacts</string>
    <string name="backups">Backups</string>
    <string name="settings">Settings</string>

    <string name="merge">Merge</string>
    <string name="delete">Delete</string>
    <string name="delete_all_dialog">Are you sure you want to Delete all Contacts?</string>

    <string name="findContact">Find Contact</string>
    <string name="backup_text">Backup all address book to keep your contains in a safe place</string>
    <string name="backup_status">Backup contact..0%</string>
    <string name="backup_complete">Backup Completed</string>
    <string name="btn_send_email">Send Email</string>

    <string name="title_contacts">Contacts</string>
    <string name="image_Description">This is imageview</string>

    <string name="total_contacts">Total Number Contacts</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="select_type">Select Type</string>
    <string name="done">Done</string>
    <string name="vcf_restore_file">Vcf Restore File</string>
    <string name="btn_email">Email</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_back_up">Back Up</string>
    <string name="general">General</string>
    <string name="all_contacts">All Contacts</string>
    <string name="duplicates">Duplicates</string>
    <string name="duplicate_contacts">Duplicate Contacts</string>
    <string name="similar_name_contacts">Similar Name</string>
    <string name="duplicate_phones">Duplicate Phones</string>
    <string name="duplicate_emails">Duplicate Emails</string>
    <string name="similar_name">Similar Name</string>
    <string name="missing_information">Missing Information</string>
    <string name="no_name">No Name</string>
    <string name="no_phones">No Phones</string>
    <string name="no_phone_and_email">No Phone and Email</string>
    <string name="filters">Filters</string>
    <string name="recently_added">Recently Added</string>
    <string name="birthday">Birthday</string>
    <string name="company">Company</string>
    <string name="job_title">Job Title</string>
    <string name="name">Name</string>
    <string name="share">Share</string>
    <string name="call_history">Call History</string>
    <string name="phone">Phone</string>
    <string name="home">Home</string>
    <string name="e_mail">E-mail</string>
    <string name="birthdate">Birthdate</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="mobile">Mobile</string>
    <string name="work">Work</string>
    <string name="address">Address</string>
    <string name="rington">Rington</string>
    <string name="recently_added_name">Recently added Name</string>
    <string name="job_titile">Job Titile</string>
    <string name="dublicate_contatcs">Dublicate Contatcs</string>
    <string name="company_name">Company Name</string>
    <string name="backup_type">Backup Type</string>
    <string name="vcf_file">VCF File</string>
    <string name="restore_vcf_file">Restore VCF File</string>
    <string name="suport">Suport</string>
    <string name="tell_a_fridens">Tell A Fridens</string>
    <string name="contact_or_feedback">Contact or Feedback</string>
    <string name="review_contacts_backup">Review Contacts Backup</string>
    <string name="more_app">More App</string>
    <string name="remove_all_contacts">Remove All Contacts</string>
    <string name="about">About</string>
    <string name="version_name">Version 2.0</string>
    <string name="new_contact">New Contact</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="title">Title</string>
</resources>
