<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backups_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="easybackup.place.ispl.MainActivity">

    <TextView
        android:id="@+id/backups_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="25dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/total_contacts"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/progress_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backups_tv"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/backup_status" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress_tv"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progress_bar" />

    <ImageView
        android:id="@+id/backup_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backups_tv"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_Description"
        android:minHeight="150dp"
        android:minWidth="150dp"
        android:src="@drawable/group" />

    <Button
        android:id="@+id/backup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btn_back_up"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/sendemail_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btn_send_email"
        android:textColor="@android:color/white" />


</RelativeLayout>