<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/picker_cancel_dailog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:clickable="true"
            android:textColor="@color/blue_light"
            android:layout_margin="15dp"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/picker_select_type_dailog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:text="@string/select_type" />

        <TextView
            android:id="@+id/picker_done_dailog"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:clickable="true"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_light"
            android:layout_alignParentRight="true"
            android:text="@string/done" />

    </RelativeLayout>

    <NumberPicker
        android:id="@+id/number_picker"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
