<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:background="@drawable/rounded_button"
    android:orientation="vertical">

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/vcf_restore_file"
        android:textSize="17sp" />

    <View
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#E0E0E0" />

    <Button
        android:id="@+id/dialog_email_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:text="@string/btn_email"
        android:textColor="@color/blue_light" />

    <View
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#E0E0E0" />

    <Button
        android:id="@+id/dialog_restore_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:text="@string/btn_restore"
        android:textColor="@color/blue_light" />

    <View
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#E0E0E0" />
</LinearLayout>
