<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/rounded_button"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delete_all_dialog_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/delete_all_dialog"
        android:textSize="20sp" />

    <View
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#E0E0E0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_button_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="1dp"
            android:layout_weight="0.5"
            android:background="@android:color/white"
            android:text="@string/btn_no"
            android:textColor="@color/blue_light" />

        <Button
            android:id="@+id/dialog_button_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_weight="0.5"
            android:background="@android:color/white"
            android:text="@string/btn_yes"
            android:textColor="@color/blue_light" />
    </LinearLayout>


    <View
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#E0E0E0" />
</LinearLayout>
